<resources>
    <string name="app_name">Perfil Magic Feeder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Magic Feeder</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Perfil</string>
    <string name="menu_gallery">Manual</string>
    <string name="menu_slideshow">Ajustes</string>
    <string name="menu_somos">¿Quiénes somos?</string>
    <string name="menu_tips">Tips para tu mascota</string>
    <string name="menu_comentarios">Ayuda o Comentarios</string>
</resources>