<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/baseline_menu_book_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_somos"
            android:icon="@drawable/baseline_diversity_3_24"
            android:title="@string/menu_somos" />
        <item
            android:id="@+id/nav_tips"
            android:icon="@drawable/baseline_recommend_24"
            android:title="@string/menu_tips" />
        <item
            android:id="@+id/nav_comentarios"
            android:icon="@drawable/baseline_comment_24"
            android:title="@string/menu_comentarios" />
    </group>
</menu>