<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sanapp.perfilmagicfeeder.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.sanapp.perfilmagicfeeder.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.sanapp.perfilmagicfeeder.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_somos"
        android:name="com.sanapp.perfilmagicfeeder.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_somos"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tips"
        android:name="com.sanapp.perfilmagicfeeder.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_tips"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_comentarios"
        android:name="com.sanapp.perfilmagicfeeder.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_comentarios"
        tools:layout="@layout/fragment_slideshow" />


</navigation>